<resources>
    <string name="app_name">Garm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!--buttons-->
    <string name="button_login">Войти</string>
    <string name="button_register">Зарегистрироваться</string>
    <string name="button_forgot_password">Восстановить пароль</string>
    <string name="button_select_image">Выбрать изображение</string>
    <string name="button_my_account">Мой профиль</string>
    <string name="button_settings">Настройки</string>
    <string name="button_logout">Выйти</string>
    <string name="button_save">Сохранить</string>
    <string name="button_delete_room">Удалить комнату</string>
    <string name="button_rename">Изменить имя</string>
    <!--inputs-->
    <string name="caption_alias">Псевдоним</string>
    <string name="caption_email">E-mail</string>
    <string name="caption_first_name">Имя</string>
    <string name="caption_last_name">Фамилия</string>
    <string name="caption_phone_number">Телефон</string>
    <string name="caption_password">Пароль</string>
    <string name="caption_repeat_password">Повторите пароль</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_jira">JiraActivity</string>

</resources>
