<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".UI.RegisterActivity"
        tools:showIn="@layout/activity_register"
        android:background="@drawable/side_back">


        <LinearLayout
            android:id="@+id/login_layout"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/registration_form_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/registration_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/reg_alias"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_alias"
                            android:maxLines="1"
                            android:singleLine="true"
                            style="@style/GarmTextEdit" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/reg_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            style="@style/GarmTextEdit" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/reg_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_first_name"
                            android:maxLines="1"
                            android:singleLine="true"
                            style="@style/GarmTextEdit"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/reg_last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_last_name"
                            android:maxLines="1"
                            android:singleLine="true"
                            style="@style/GarmTextEdit" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/reg_phone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_phone_number"
                            android:maxLines="1"
                            android:ems="10"
                            android:inputType="phone"
                            android:singleLine="true"
                            style="@style/GarmTextEdit" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/reg_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            style="@style/GarmTextEdit" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/reg_repeat_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/caption_repeat_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            style="@style/GarmTextEdit" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <lexdikoy.garm.ImageViews.CircularImageView
                            android:id="@+id/reg_avatar"
                            android:layout_width="70dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="0dp"
                            android:maxWidth="70dp"
                            android:maxHeight="70dp"
                            android:src="@drawable/ico"
                            app:siBorderColor="@color/colorPrimaryDark"
                            app:siBorderWidth="2dp"
                            />

                        <Button
                            android:id="@+id/reg_choice_image_button"
                            style="@style/GarmButtonColored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="0dp"
                            android:text="@string/button_select_image" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/reg_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/button_register"
                        style="@style/GarmButtonColored" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>






    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>