<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.UserProfileActivity"
    tools:showIn="@layout/activity_user_profile">


    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <lexdikoy.garm.ImageViews.CircularImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/ico"
                    app:siBorderColor="@color/colorBorder"
                    app:siBorderWidth="2dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/registration_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorBorder">

                    <AutoCompleteTextView
                        android:id="@+id/profile_alias"
                        style="@style/GarmTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBorder"
                        android:hint="@string/caption_alias"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorBorder">

                    <AutoCompleteTextView
                        android:id="@+id/profile_email"
                        style="@style/GarmTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBorder"
                        android:hint="@string/caption_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorBorder">

                    <AutoCompleteTextView
                        android:id="@+id/profile_first_name"
                        style="@style/GarmTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBorder"
                        android:hint="@string/caption_first_name"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorBorder">

                    <AutoCompleteTextView
                        android:id="@+id/profile_last_name"
                        style="@style/GarmTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBorder"
                        android:hint="@string/caption_last_name"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/colorBorder">

                    <AutoCompleteTextView
                        android:id="@+id/profile_phone_number"
                        style="@style/GarmTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBorder"
                        android:ems="10"
                        android:hint="@string/caption_phone_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/profile_save_button"
                    style="@style/GarmButtonColored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border_button"
                    android:text="@string/button_save" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>